demo creating 2 versions of the docker image, 1 with postgres, 1 without
Signed-off-by: nhartner <nhartner@gmail.com>